--- a/static/css/sou_night.css
+++ b/static/css/sou_night.css
@@ -1,6 +1,13 @@
 @charset "utf-8";
 
 /*
+Night mode for sou2
+Author:Holger Huo
+https://blog.holger.net.cn/
+Apr.11 2020
+*/
+
+/*
     Copyright 2020 Holger https://holger.net.cn Under GPLv3.0 @ https://github.com/holgerhuo/minimalist-search
 */
 
